--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
+  "pre-commit": "eslint",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -32,6 +33,8 @@
     "@storybook/addon-links": "^5.0.3",
     "@storybook/addons": "^5.0.3",
     "@storybook/react": "^5.0.3",
-    "babel-loader": "^8.0.5"
+    "babel-loader": "^8.0.5",
+    "eslint": "^5.15.3",
+    "eslint-plugin-react": "^7.12.4"
   }
 }
