--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
+    "eslint": "eslint .",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
