--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/react": "^5.0.3",
     "babel-loader": "^8.0.5",
     "eslint": "^5.15.3",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "pre-commit": "^1.2.2"
   }
 }
