--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
